<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.insalyon.creatis</groupId>
    <artifactId>grida</artifactId>
    <packaging>pom</packaging>
    <version>2.3.0</version>
    <name>GRIDA</name>
    <description>GRID data manager Agent</description>
    <inceptionYear>2011</inceptionYear>
    <url>https://github.com/virtual-imaging-platform/GRIDA</url>

    <licenses>
        <license>
            <name>CeCILL-B, Version 1.0</name>
            <url>http://www.cecill.info/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>CREATIS-LRMN</name>
        <url>http://www.creatis.insa-lyon.fr/</url>
    </organization>

    <modules>
        <module>grida-common</module>
        <module>grida-client</module>
        <module>grida-server</module>
        <module>grida-standalone</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>creatis</id>
            <name>Creatis Insa Lyon repository [creatis]</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/public</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>creatis-releases</id>
            <name>Internal Releases</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/releases</url>
        </repository>

        <snapshotRepository>
            <id>creatis-snapshots</id>
            <name>Internal Snapshots</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
